Add bear to header, change header spacing

--- a/css/components/_addcoursemodal.scss
+++ b/css/components/_addcoursemodal.scss
@@ -74,5 +74,5 @@
 .modal-confirm-button {
   margin-left: 1rem;
   font-size: 0.8rem;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 0.8rem 0.25rem 0.8rem;
 }
