--- a/css/layouts/_header.scss
+++ b/css/layouts/_header.scss
@@ -1,15 +1,22 @@
 .banner {
   width: 100%;
   background-color: $primary-blue;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.banner-image {
+  display: inline-block;
+  margin-left: 2rem;
+  font-size: 1.2rem;
+  height: 1.2rem;
 }
 
 .banner-text {
+  display: inline-block;
   color: white;
-  margin-top: 0rem;
-  margin-left: 2rem;
+  margin-left: 1rem;
   font-size: 1.2rem;
-  padding-top: 1rem;
-  padding-bottom: 0.75rem;
 }
 
 .my-academics-link-wrapper {
