--- a/css/modules/_base.scss
+++ b/css/modules/_base.scss
@@ -16,7 +16,7 @@ button {
   text-decoration: none;
   display: inline-block;
   border-radius: 0.25rem;
-  font-family: 'Calibre-Regular', sans-serif !important;
+  font-family: 'Calibre-Regular', sans-serif;
 }
 
 a {
