[bugfix] Fix dropdown bolding

--- a/css/components/_semesterheader.scss
+++ b/css/components/_semesterheader.scss
@@ -26,10 +26,11 @@
   .Select-placeholder {
     height: 2rem !important;
     line-height: 33px !important;
-    padding-top: 0.4rem !important;
-    padding-left: 0.3rem !important;
+    padding-top: 0.25rem !important;
+    padding-left: 0.5rem !important;
     color: black !important;
     overflow: visible !important;
+    font-weight: bold !important;
   }
 
   .Select-input {
